added skeleton of JWT generation
